--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "12.1.4",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-table": "^7.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
