--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nextjs-progressbar": "^0.0.14",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-table": "^7.7.0"
+    "react-table": "^7.7.0",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
