--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "framer-motion": "^6.2.8",
     "next": "12.1.4",
     "nextjs-progressbar": "^0.0.14",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^17.x",
+    "react-async": "^10.0.1",
+    "react-dom": "^17.x",
     "react-table": "^7.7.0",
     "web3": "^1.7.3"
   },
